--- a/app/SCSS/global.css
+++ b/app/SCSS/global.css
@@ -715,8 +715,8 @@
   }
   .main__info-for-you .for-you-container__text {
     order: 1;
-    width: 80%;
-    height: 90%;
+    width: 95%;
+    height: 95%;
   }
   .main__info-for-you .for-you-container__text .set-1 h3 {
     font-size: 1.375rem;
@@ -751,10 +751,10 @@
   }
   .main__info-for-you .mini-shipping__text {
     order: 2;
-    transform: translateX(-20%);
+    transform: translateX(-13%);
   }
   .main__info-for-you .cargo-shipping__text {
-    transform: translateX(20%);
+    transform: translateX(13%);
   }
 }
 /* || FOR DESKTOP */
